Closed Bug 1923416 Opened 15 days ago Closed 5 days ago

Check that MsectionIsDisabled instead of for port 0 to resolve Telegram A no media issue

Categories

(Core :: WebRTC: Audio/Video, defect, P3)

defect

Tracking

()

RESOLVED FIXED
133 Branch
Tracking Status
firefox133 --- fixed

People

(Reporter: dbaker, Assigned: dbaker)

References

(Blocks 2 open bugs, Regressed 1 open bug)

Details

Attachments

(2 files)

We are incorrectly assuming port 0 is disabled in some instances even though bundling is used. This is causing media to not be sent/received.

Attachment #9430038 - Flags: approval-mozilla-beta?

So I'm clear, this is a Beta-only patch? What's the plan for 133+?

Flags: needinfo?(dbaker)

(In reply to Ryan VanderMeulen [:RyanVM] from comment #2)

So I'm clear, this is a Beta-only patch? What's the plan for 133+?

I don't think I meant this for the beta repository my bad.

Flags: needinfo?(dbaker)
Attachment #9430038 - Flags: approval-mozilla-beta?
Blocks: 1925364
Attachment #9430038 - Attachment description: Bug 1923416 - Check if msection is disabled instead of if port is 0 when deciding to stop transciever during negotiation;r?bwc → Bug 1923416 - Check if msection is disabled instead of if port is 0 when deciding to stop transceiver during negotiation;r?bwc
Attachment #9431694 - Flags: approval-mozilla-beta?
Attachment #9431694 - Flags: approval-mozilla-beta?
Attachment #9431694 - Flags: approval-mozilla-beta?
Attachment #9431694 - Flags: approval-mozilla-beta?
Pushed by dbaker@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/226de61f8558 Check if msection is disabled instead of if port is 0 when deciding to stop transceiver during negotiation;r=bwc https://hg.mozilla.org/integration/autoland/rev/66a2436a32be Added test case to verify transceivers are not disabled if port is 0 with bundling;r=bwc
Status: NEW → RESOLVED
Closed: 5 days ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
Regressions: 1925740
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: