Bug 1923416 - Check if msection is disabled instead of if port is 0 when deciding to stop transceiver during negotiation;r=bwc

Differential Revision: https://phabricator.services.mozilla.com/D225151